@@ -39,9 +39,6 @@ CFLAGS = -DUSELIBGCRYPT -Wall
 ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -g
 endif
-ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-	INSTALL_PROGRAM += -s
-endif
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
         CFLAGS += -O0
 else
@@ -52,7 +49,7 @@ endif
 	dh $@
 
 override_dh_auto_build:
-	$(MAKE) CFLAGS="$(CFLAGS)"
+	dh_auto_build -- CFLAGS="$(CFLAGS)"
 
 override_dh_installdocs:
 	dh_installdocs
